--- a/server/public/stylesheets/defaultGrid.css
+++ b/server/public/stylesheets/defaultGrid.css
@@ -69,7 +69,7 @@ a:hover {
     /*margin-top: 100px;*/
     grid-area: footer;
     font-size: smaller;
-    position: absolute;
+    position: relative;
     bottom: 0;
     width: 100%;
     height: 40px; /* Height of the footer */
