tidier class timetable ... massive table definition

--- a/server/app/views/classtimetable.scala.html
+++ b/server/app/views/classtimetable.scala.html
@@ -44,63 +44,217 @@
         <tbody>
             <tr>
                 <th class="table-secondary" scope="row">Monday</th>
-                <td class="subject-maths" colspan="2">Maths</td>
-                <td class="timetable-break"></td>
-                <td class="subject-reading">Reading</td>
-                <td class="subject-spelling">Spelling</td>
-                <td class="timetable-break"></td>
-                <td class="subject-topic" colspan="2">Topic</td>
-            </tr>
-            <tr>
-                <th class="table-secondary" scope="row">Tuesday</th>
-                <td class="subject-maths">Maths</td>
-                <td class="subject-physical-education">P.E.</td>
-                <td class="timetable-break"></td>
-                <td class="subject-writing">Writing</td>
-                <td class="subject-music">Music</td>
-                <td class="timetable-break"></td>
-                <td class="subject-topic" colspan="2">Topic</td>
-            </tr>
-            <tr>
-                <th class="table-secondary" scope="row">Wednesday</th>
-                <td class="subject-reading">Reading</td>
-                <td class="subject-spelling">Spelling</td>
-                <td class="timetable-break"></td>
-                <td class="subject-maths">Maths</td>
-                <td class="subject-drama">Drama</td>
-                <td class="timetable-break"></td>
-                <td class="subject-writing">Writing</td>
-                <td class="subject-health">Health</td>
-            </tr>
-            <tr>
-                <th class="table-secondary" scope="row">Thursday</th>
-                <td class="subject-maths" colspan="2">Maths</td>
-                <td class="timetable-break"></td>
-                <td class="subject-reading">Reading</td>
-                <td class="subject-topic">Topic</td>
-                <td class="timetable-break"></td>
-                <td class="subject-ict">ICT</td>
-                <td class="subject-physical-education">P.E.</td>
-            </tr>
-            <tr>
-                <th class="table-secondary" scope="row">Friday</th>
-                <td colspan="2" class="subject-teacher-covertime">
-                    RCCT
+                <td class="inner-cell" colspan="2">
                     <table class="table">
                         <tbody>
                             <tr>
-                                <td class="subject-spelling">Spelling</td>
-                                <td class="subject-reading">Reading</td>
+                                <td class="subject-maths">Maths</td>
                             </tr>
                         </tbody>
                     </table>
                 </td>
+
                 <td class="timetable-break"></td>
-                <td class="subject-maths">Maths</td>
-                <td class="subject-topic">Topic</td>
+
+                <td class="inner-cell" colspan="2">
+                    <table class="table">
+                        <tbody>
+                            <tr>
+                                <td class="subject-reading">Reading</td>
+                                <td class="subject-spelling">Spelling</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </td>
+
                 <td class="timetable-break"></td>
-                <td class="subject-assembly">Assembly</td>
-                <td class="subject-golden-time">Golden Time</td>
+
+                <td class="inner-cell" colspan="2">
+                    <table class="table">
+                        <tbody>
+                            <tr>
+                                <td class="subject-topic" colspan="2">Topic</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </td>
+            </tr>
+            <tr>
+                <th class="table-secondary" scope="row">Tuesday</th>
+
+                <td class="inner-cell" colspan="2">
+                    <table class="table">
+                        <tbody>
+                            <tr>
+                                <td id="tuesday-subject-maths-with-note" class="subject-maths">
+                                    Maths
+                                    <div class="subject-level-note">
+                                        Mental Maths
+                                    </div>
+                                </td>
+                                <td class="subject-physical-education">P.E.</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </td>
+
+                <td class="timetable-break"></td>
+
+                <td class="inner-cell" colspan="2">
+                    <table class="table">
+                        <tbody>
+                            <tr>
+                                <td class="subject-writing">Writing</td>
+                                <td class="subject-music">Music</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </td>
+
+                <td class="timetable-break"></td>
+
+                <td colspan="2">
+                    <div class="inner-cell">
+                        <table class="table">
+                            <tbody>
+                                <tr>
+                                    <td class="subject-topic" colspan="2">Topic</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </td>
+            </tr>
+
+            <tr>
+                <th class="table-secondary" scope="row">Wednesday</th>
+                <td class="inner-cell" colspan="2">
+                    <table class="table">
+                        <tbody>
+                            <tr>
+                                <td class="subject-reading">Reading</td>
+                                <td class="subject-spelling">Spelling</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </td>
+
+                <td class="timetable-break"></td>
+
+
+                <td class="inner-cell" colspan="2">
+                    <table class="table">
+                        <tbody>
+                            <tr>
+                                <td class="subject-maths">Maths</td>
+                                <td class="subject-drama">Drama</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </td>
+
+                <td class="timetable-break"></td>
+
+                <td class="inner-cell" colspan="2">
+                    <table class="table">
+                        <tbody>
+                            <tr>
+                                <td class="subject-writing">Writing</td>
+                                <td class="subject-health">Health</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </td>
+
+            </tr>
+            <tr>
+                <th class="table-secondary" scope="row">Thursday</th>
+
+                <td class="inner-cell" colspan="2">
+                    <table class="table">
+                        <tbody>
+                            <tr>
+                                <td class="subject-maths" colspan="2">Maths</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </td>
+
+                <td class="timetable-break"></td>
+
+                <td class="inner-cell" colspan="2">
+                    <table class="table">
+                        <tbody>
+                            <tr>
+                                <td class="subject-reading">Reading</td>
+                                <td class="subject-topic">Topic</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </td>
+
+                <td class="timetable-break"></td>
+
+                <td class="inner-cell" colspan="2">
+                    <table class="table">
+                        <tbody>
+                            <tr>
+                                <td class="subject-ict">ICT</td>
+                                <td class="subject-physical-education">P.E.</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </td>
+
+            </tr>
+            <tr>
+                <th class="table-secondary" scope="row">Friday</th>
+
+                <td class="inner-cell" colspan="2">
+                    <table class="table">
+                        <tbody>
+                            <tr>
+                                <td id="friday-subject-teacher-covertime" colspan="2" class="subject-teacher-covertime">
+                                    RCCT - Mrs Boyle
+                                    <table class="table">
+                                        <tbody>
+                                            <tr>
+                                                <td class="subject-spelling">Spelling</td>
+                                                <td class="subject-reading">Reading</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </td>
+
+                <td class="timetable-break"></td>
+
+                <td class="inner-cell" colspan="2">
+                    <table class="table">
+                        <tbody>
+                            <tr>
+                                <td class="subject-maths">Maths</td>
+                                <td class="subject-topic">Topic</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </td>
+
+                <td class="timetable-break"></td>
+
+                <td class="inner-cell" colspan="2">
+                    <table class="table">
+                        <tbody>
+                            <tr>
+                                <td class="subject-assembly">Assembly</td>
+                                <td class="subject-golden-time">Golden Time</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </td>
             </tr>
         </tbody>
     </table>
