--- a/server/public/stylesheets/timetable.css
+++ b/server/public/stylesheets/timetable.css
@@ -3,21 +3,38 @@ div {
     padding: 0;
 }
 
+.table {
+    margin:0;
+    padding: 0;
+}
+
 .table th {
-    padding-top: 25px;
-    padding-bottom: 25px;
-    padding-left: 0;
-    padding-right: 0;
+    padding: 0;
     text-align: center;
+    vertical-align: middle;
 }
 
 .table td {
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: 4px;
-    padding-right: 4px;
+    padding: 0;
+    vertical-align: middle;
 }
 
+.table td {
+    padding: 0;
+    vertical-align: middle;
+}
+
+.inner-cell td {
+    padding: 30px 7px;
+}
+
+#tuesday-subject-maths-with-note {
+    padding: 15px 7px;
+}
+
+#friday-subject-teacher-covertime {
+    padding: 5px 7px;
+}
 .grid-wrapper-table-head-element {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -136,3 +153,14 @@ div {
     width: 28px !important;
     height: 28px !important;
 }
+
+.subject-level-note {
+    border: double;
+    border-color: white;
+    background-color: #b3b3b3;
+    color: white;
+    font-style: italic;
+    font-weight: lighter;
+    text-shadow: 1px 1px #999;
+}
+
