CHECK POINT - using tables wih bootstrap

--- a/server/app/views/classtimetable.scala.html
+++ b/server/app/views/classtimetable.scala.html
@@ -48,7 +48,7 @@
                     <table class="table">
                         <tbody>
                             <tr>
-                                <td class="subject-maths">Maths</td>
+                                <td class="col-md-1 subject-maths">Maths</td>
                             </tr>
                         </tbody>
                     </table>
@@ -60,8 +60,8 @@
                     <table class="table">
                         <tbody>
                             <tr>
-                                <td class="subject-reading">Reading</td>
-                                <td class="subject-spelling">Spelling</td>
+                                <td class="col-md-1 subject-reading">Reading</td>
+                                <td class="col-md-1 subject-spelling">Spelling</td>
                             </tr>
                         </tbody>
                     </table>
@@ -73,7 +73,7 @@
                     <table class="table">
                         <tbody>
                             <tr>
-                                <td class="subject-topic" colspan="2">Topic</td>
+                                <td class="col-md-1 subject-topic" colspan="2">Topic</td>
                             </tr>
                         </tbody>
                     </table>
@@ -86,13 +86,13 @@
                     <table class="table">
                         <tbody>
                             <tr>
-                                <td id="tuesday-subject-maths-with-note" class="subject-maths">
+                                <td id="tuesday-subject-maths-with-note" class="col-md-1 subject-maths">
                                     Maths
                                     <div class="subject-level-note">
                                         Mental Maths
                                     </div>
                                 </td>
-                                <td class="subject-physical-education">P.E.</td>
+                                <td class="col-md-1 subject-physical-education">P.E.</td>
                             </tr>
                         </tbody>
                     </table>
@@ -104,8 +104,8 @@
                     <table class="table">
                         <tbody>
                             <tr>
-                                <td class="subject-writing">Writing</td>
-                                <td class="subject-music">Music</td>
+                                <td class="col-md-1 subject-writing">Writing</td>
+                                <td class="col-md-1 subject-music">Music</td>
                             </tr>
                         </tbody>
                     </table>
@@ -118,7 +118,7 @@
                         <table class="table">
                             <tbody>
                                 <tr>
-                                    <td class="subject-topic" colspan="2">Topic</td>
+                                    <td class="col-md-1 subject-topic" colspan="2">Topic</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -132,8 +132,8 @@
                     <table class="table">
                         <tbody>
                             <tr>
-                                <td class="subject-reading">Reading</td>
-                                <td class="subject-spelling">Spelling</td>
+                                <td class="col-md-1 subject-reading">Reading</td>
+                                <td class="col-md-1 subject-spelling">Spelling</td>
                             </tr>
                         </tbody>
                     </table>
@@ -146,8 +146,8 @@
                     <table class="table">
                         <tbody>
                             <tr>
-                                <td class="subject-maths">Maths</td>
-                                <td class="subject-drama">Drama</td>
+                                <td class="col-md-1 subject-maths">Maths</td>
+                                <td class="col-md-1 subject-drama">Drama</td>
                             </tr>
                         </tbody>
                     </table>
@@ -159,8 +159,8 @@
                     <table class="table">
                         <tbody>
                             <tr>
-                                <td class="subject-writing">Writing</td>
-                                <td class="subject-health">Health</td>
+                                <td class="col-md-1 subject-writing">Writing</td>
+                                <td class="col-md-1 subject-health">Health</td>
                             </tr>
                         </tbody>
                     </table>
@@ -174,7 +174,7 @@
                     <table class="table">
                         <tbody>
                             <tr>
-                                <td class="subject-maths" colspan="2">Maths</td>
+                                <td class="col-md-1 subject-maths" colspan="2">Maths</td>
                             </tr>
                         </tbody>
                     </table>
@@ -186,8 +186,8 @@
                     <table class="table">
                         <tbody>
                             <tr>
-                                <td class="subject-reading">Reading</td>
-                                <td class="subject-topic">Topic</td>
+                                <td class="col-md-1 subject-reading">Reading</td>
+                                <td class="col-md-1 subject-topic">Topic</td>
                             </tr>
                         </tbody>
                     </table>
@@ -199,8 +199,8 @@
                     <table class="table">
                         <tbody>
                             <tr>
-                                <td class="subject-ict">ICT</td>
-                                <td class="subject-physical-education">P.E.</td>
+                                <td class="col-md-1 subject-ict">ICT</td>
+                                <td class="col-md-1 subject-physical-education">P.E.</td>
                             </tr>
                         </tbody>
                     </table>
@@ -214,17 +214,8 @@
                     <table class="table">
                         <tbody>
                             <tr>
-                                <td id="friday-subject-teacher-covertime" colspan="2" class="subject-teacher-covertime">
-                                    RCCT - Mrs Boyle
-                                    <table class="table">
-                                        <tbody>
-                                            <tr>
-                                                <td class="subject-spelling">Spelling</td>
-                                                <td class="subject-reading">Reading</td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
-                                </td>
+                                <td class="col-md-1 subject-spelling">Spelling</td>
+                                <td class="col-md-1 subject-reading">Reading</td>
                             </tr>
                         </tbody>
                     </table>
@@ -236,8 +227,8 @@
                     <table class="table">
                         <tbody>
                             <tr>
-                                <td class="subject-maths">Maths</td>
-                                <td class="subject-topic">Topic</td>
+                                <td class="col-md-1 subject-maths">Maths</td>
+                                <td class="col-md-1 subject-topic">Topic</td>
                             </tr>
                         </tbody>
                     </table>
@@ -249,8 +240,8 @@
                     <table class="table">
                         <tbody>
                             <tr>
-                                <td class="subject-assembly">Assembly</td>
-                                <td class="subject-golden-time">Golden Time</td>
+                                <td class="col-md-1 subject-assembly">Assembly</td>
+                                <td class="col-md-1 subject-golden-time">Golden Time</td>
                             </tr>
                         </tbody>
                     </table>
