--- a/server/public/stylesheets/common.css
+++ b/server/public/stylesheets/common.css
@@ -6,7 +6,6 @@
 
 body {
     background-color: white;
-    margin: 5px;
 }
 
 #signup-body {
@@ -15,14 +14,11 @@ body {
 
 .img-circle-standard {
     margin: 25px;
-    /*border: 5px blue;*/
     border-radius: 50%;
 }
 
 .img-circle-small {
-    /*color: #000;*/
     margin: 3px;
-    /*border: 2px blue;*/
     border-radius: 50%;
     width: 32px;
     height: 32px;
@@ -141,7 +137,7 @@ select {
 table {
     font-size: smaller;
     border-collapse: separate;
-    border-spacing: 3px;
+    border-spacing: 0.2em;
     border-radius: 5px;
 }
 
