--- a/server/public/stylesheets/defaultGrid.css
+++ b/server/public/stylesheets/defaultGrid.css
@@ -3,7 +3,7 @@ h2 {
     font-size: x-large;
     text-align: center;
     color: #3071a9;
-    margin-bottom: 20px;
+    margin-bottom: 1em;
 }
 
 div {
@@ -21,15 +21,14 @@ a:hover {
 
 .wrapper {
     display: grid;
-    grid-gap: 2px;
+    grid-gap: 0.2em;
     grid-template-columns: 1fr;
     grid-template-areas: "main-nav-bar" "app-nav-bar" "content" "footer";
 }
 
 .box {
     border-radius: 5px;
-    padding: 6px;
-    font-size: 90%;
+    padding: 0.2em;
 }
 
 .main-nav-bar {
@@ -48,7 +47,7 @@ a:hover {
 .sidebarwrapper {
     grid: inherit;
     display: grid;
-    grid-gap: 2px;
+    grid-gap: 0.2em;
     grid-template-columns: minmax(0, 1fr) minmax(0fr, 1fr);
     grid-template-areas: "sidebar-user-icon sidebar-hamburger";
 }
@@ -66,13 +65,13 @@ a:hover {
 }
 
 .footer {
-    /*margin-top: 100px;*/
+    margin-top: 3em;
     grid-area: footer;
     font-size: smaller;
     position: relative;
     bottom: 0;
     width: 100%;
-    height: 40px; /* Height of the footer */
+    height: 3em; /* Height of the footer */
 }
 
 .makecenter {
