--- a/server/public/stylesheets/timetable.css
+++ b/server/public/stylesheets/timetable.css
@@ -25,26 +25,25 @@ div {
 }
 
 .inner-cell td {
-    padding: 30px 7px;
+    padding: 3.5em 0;
 }
 
 #tuesday-subject-maths-with-note {
-    padding: 15px 7px;
+    padding: 1em 0;
 }
 
 #friday-subject-teacher-covertime {
-    padding: 5px 7px;
+    padding: 0;
 }
 .grid-wrapper-table-head-element {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-areas: "lesson-column-title lesson-column-title lesson-column-title" "lesson-duration lesson-duration lesson-duration" "lesson-time-start lesson-time-start-end-buffer lesson-time-end" ;
+    grid-template-columns: 1fr;
+    grid-template-areas: "lesson-column-title" ;
 }
 
 .lesson-column-title {
     font-size: larger;
     grid-area: lesson-column-title;
-    padding-bottom: 10px;
 }
 
 .lesson-time-start {
@@ -64,8 +63,6 @@ div {
 .lesson-time-start-end-buffer {
     grid-area: lesson-time-start-end-buffer;
     font-size: x-small;
-    padding-left: 3px;
-    padding-right: 3px;
     color: #888888;
 }
 
@@ -74,80 +71,116 @@ div {
     text-align: center;
     font-size: x-small;
     color: #555555;
-    margin-bottom: 4px;
 }
+
+/* ================= */
+/*   Colours - START */
+/* ================= */
 .subject-maths {
-    background-color: lightskyblue;
+    background-color: rgba(135, 206, 250, 0.5);
     color: black;
+    font-size: larger;
+    width: 50%;
 }
 
 .subject-writing {
-    background-color: #14aa15;
+    background-color: rgba(20, 171, 20, 0.5);
     color: black;
+    font-size: larger;
+    width: 50%;
 }
 
 .subject-reading {
-    background-color: #8ae303;
+    background-color: rgba(138, 227, 3, 0.5);
     color: black;
+    font-size: larger;
+    width: 50%;
 }
 
 .subject-spelling {
-    background-color: #2fe9a2;
+    background-color: rgba(47, 233, 162, 0.5);
     color: black;
+    font-size: larger;
+    width: 50%;
 }
 
 .subject-physical-education {
-    background-color: #ff7f29;
+    background-color: rgba(255, 127, 41, 0.5);
     color: black;
+    font-size: larger;
+    width: 50%;
 }
 
 .subject-topic {
-    background-color: #f5ec07;
+    background-color: rgba(233, 225, 8, 0.5);
     color: black;
+    font-size: larger;
+    width: 50%;
 }
 
 .subject-empty {
-    background-color: lightgrey;
+    background-color: rgba(211, 211, 211, 0.5);
     font-weight: lighter;
     color: blue;
+    font-size: larger;
+    width: 50%;
 }
 
 .subject-ict {
-    background-color: #ff78b3;
+    background-color: rgba(255, 81, 0, 0.8);
     color: black;
+    font-size: larger;
+    width: 50%;
 }
 
 .subject-music {
-    background-color: #e2b48c;
+    background-color: rgba(226, 180, 140, 0.5);
     color: black;
+    font-size: larger;
+    width: 50%;
 }
 
 .subject-health {
-    background-color: #5050ed;
-    color: white;
+    background-color: rgba(80, 80, 237, 0.5);
+    color: black;
+    font-size: larger;
+    width: 50%;
 }
 
 .subject-drama {
-    background-color: #b28bff;
+    background-color: rgba(218, 129, 255, 0.5);
     color: black;
+    font-size: larger;
+    width: 50%;
 }
 
 .subject-golden-time {
-    background-color: gold;
+    background-color: rgba(203, 148, 0, 0.69);
     color: black;
+    font-size: larger;
+    width: 50%;
 }
 
 .subject-teacher-covertime {
-    background-color: #00353c;
+    background-color: rgba(0, 53, 60, 0.5);
     color: white;
+    font-size: larger;
+    width: 50%;
 }
 
 .subject-assembly {
-    background-color: red;
+    background-color: rgba(255, 0, 0, 0.65);
     color: white;
     font-weight: bolder;
     text-shadow: 1px 1px #000;
+    font-size: larger;
+    width: 50%;
 }
+/* ================= */
+/*   Colours - END */
+/* ================= */
+
+
 
 .teacher-break-image {
     width: 28px !important;
