--- a/server/app/views/classtimetable.scala.html
+++ b/server/app/views/classtimetable.scala.html
@@ -5,4 +5,40 @@
 
     <h2>Class Timetable</h2>
 
+    <div class="container">
+        <div class="row bg-primary text-light">
+            <div class="col-md-1"></div>
+            <div class="col-md-3 ">Early Morning</div>
+            <div class="col-md-1">Break</div>
+            <div class="col-md-3 ">Late Morning</div>
+            <div class="col-md-1">Lunch</div>
+            <div class="col-md-3 order">Afternoon</div>
+        </div>
+        <div class="row">
+            <div class="col-md-1 bg-primary text-light" >Tuesday</div>
+            <div class="col-md-3 ">
+                <div class="row">
+                    <div class="col-6 rounded subject-maths">Maths
+                        <button type="button" class="close" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="col-6 rounded subject-physical-education">P.E.</div>
+                </div>
+            </div>
+            <div class="col-md-1"></div>
+            <div class="col-md-3">
+                <div class="row">
+                    <div class="col-8 rounded subject-writing">Writing</div>
+                    <div class="col-4 rounded subject-music">Music</div>
+                </div>
+            </div>
+            <div class="col-md-1"></div>
+            <div class="col-md-3">
+                <div class="row">
+                    <div class="col-12 rounded subject-topic">Topic</div>
+                </div>
+            </div>
+        </div>
+    </div>
 }
