--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -92,21 +92,21 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img class="d-block w-100" src="@routes.Assets.versioned("/icons/teacherPicture1.jpg")" alt="Teacher 1">
+                        <img class="d-block w-100" src="@routes.Assets.versioned("/images/teacherPicture1.jpg")" alt="Teacher 1">
                         <div class="carousel-caption">
                             <h3>Teacher In Class</h3>
                             <p>She is having lots of fun wit hthe kids learning loads!</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100" src="@routes.Assets.versioned("/icons/teacherPicture2.jpg")" alt="Teacher 2">
+                        <img class="d-block w-100" src="@routes.Assets.versioned("/images/teacherPicture2.jpg")" alt="Teacher 2">
                         <div class="carousel-caption">
                             <h3>Teacher Working At The Board</h3>
                             <p>Looks like there is something complicated hapening here!</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100" src="@routes.Assets.versioned("/icons/teacherPicture3.jpg")" alt="Teacher 3">
+                        <img class="d-block w-100" src="@routes.Assets.versioned("/images/teacherPicture3.jpg")" alt="Teacher 3">
                         <div class="carousel-caption">
                             <h3>Teacher Smiling At The Board</h3>
                             <p>It must all be correct</p>
@@ -144,7 +144,7 @@
                                     <div class="card-block">
                                         <h4 class="card-title">Strategy &amp; Planning</h4>
                                         <h6 class="subtitle">Support card subtitle</h6>
-                                        <img src="@routes.Assets.versioned("/icons/chalkboard.jpg")" alt="A Chalkboard">
+                                        <img src="@routes.Assets.versioned("../../public/images/chalkboard.jpg")" alt="A Chalkboard">
                                     </div>
                                     <div class="card-block">
                                         <p class="card-text">
@@ -159,7 +159,7 @@
                                     <div class="card-block">
                                         <h4 class="card-title">Creative &amp; Design</h4>
                                         <h6 class="subtitle">Support card subtitle</h6>
-                                        <img src="@routes.Assets.versioned("/icons/workingOnLaptop.jpg")" alt="Working on laptop">
+                                        <img src="@routes.Assets.versioned("../../public/images/workingOnLaptop.jpg")" alt="Working on laptop">
                                     </div>
                                     <div class="card-block">
                                         <p class="card-text">
@@ -178,7 +178,7 @@
                                     <div class="card-block">
                                         <h4 class="card-title">Programming &amp; Technical</h4>
                                         <h6 class="subtitle">Support card subtitle</h6>
-                                        <img src="@routes.Assets.versioned("/icons/computer-programming.jpeg")" alt="Example of a program">
+                                        <img src="@routes.Assets.versioned("../../public/images/computer-programming.jpeg")" alt="Example of a program">
                                     </div>
                                     <div class="card-block">
                                         <p class="card-text">
@@ -248,7 +248,7 @@
                         <div class="col-sm-12">
                             <div class="card-columns">
                                 <div class="card">
-                                    <img class="card-img-top" src="@routes.Assets.versioned("/icons/takingPhoto.jpg")" alt="Card image cap">
+                                    <img class="card-img-top" src="@routes.Assets.versioned("../../public/images/takingPhoto.jpg")" alt="Card image cap">
                                     <div class="card-body">
                                         <h4 class="card-title">Card title that wraps to a new line</h4>
                                         <p class="card-text">
@@ -266,7 +266,7 @@
                                     </blockquote>
                                 </div>
                                 <div class="card">
-                                    <img class="card-img-top" src="@routes.Assets.versioned("/icons/nightSkyPotrait.jpg")" alt="Card image cap">
+                                    <img class="card-img-top" src="@routes.Assets.versioned("../../public/images/nightSkyPotrait.jpg")" alt="Card image cap">
                                     <div class="card-body">
                                         <h4 class="card-title">Card title</h4>
                                         <p class="card-text">
@@ -293,7 +293,7 @@
                                     </div>
                                 </div>
                                 <div class="card">
-                                    <img class="card-img" src="@routes.Assets.versioned("/icons/laptopCoffee.jpg")" alt="Card image">
+                                    <img class="card-img" src="@routes.Assets.versioned("../../public/images/laptopCoffee.jpg")" alt="Card image">
                                 </div>
                                 <div class="card p-3 text-right bg-warning text-light">
                                     <blockquote class="blockquote mb-0">
