--- a/server/app/views/zzzStartup.scala.html
+++ b/server/app/views/zzzStartup.scala.html
@@ -12,34 +12,255 @@
     </head>
     <body>
 
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#startupNavbar" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="#">
+                <img src="@routes.Assets.versioned("icons/SudoStream_icon.png")" alt="logo" height="26">
+                <span class="display-6">Time To Teach</span>
+            </a>
 
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-                <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+            <div class="collapse navbar-collapse" id="startupNavbar">
+                <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                     <li class="nav-item active">
                         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link" href="#feature-one">Features</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="#">Disabled</a>
+                        <a class="nav-link" href="#">Pricing</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Blog</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn btn-primary" href="#">Sign in</a>
                     </li>
                 </ul>
-                <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                </form>
             </div>
         </nav>
 
+        <div id="stage">
+            <div id="stage-caption">
+                <h1 class="display-3">That's handy, Andy! Stick it in the startup logo.</h1>
+                <p>I see startup logo in your future.</p>
+                <a href="" class="btn btn-lg btn-success">Sign up now</a>
+            </div>
+        </div>
+
+        <section id="feature-one">
+            <div class="container">
+                <div class="row">
+                    <div class="feature-content">
+                        <div class="col-lg-6">
+                            <iframe width="100%" height="315" src="https://www.youtube.com/embed/ZTLAx3VDX7g"
+                            frameborder="0" allowfullscreen></iframe>
+                        </div>
+                        <div class="col-lg-5 ml-auto">
+                            <h6>Watch this</h6>
+                            <h2>Witness the power of startup.logo in this acapella video</h2>
+                            <p class="lead">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                            </p>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                                irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="feature-two" class="feature-dark">
+            <div class="container">
+                <div class="row">
+                    <div class="feature-content">
+                        <div class="col-lg-6 feature-caption">
+                            <h6>Incredible feature</h6>
+                            <h2>Totally random websites. At the touch of your finger pads.</h2>
+                            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam
+                                consequatur cumque dicta incidunt perferendis quaerat repellendus reprehenderit
+                                veniam voluptate voluptates. Adipisci autem facilis in iste natus nihil, nulla
+                                totam velit.</p>
+                            <a href="" class="btn btn-outline-secondary btn-lg" role="button">Get in on the action</a>
+                        </div>
+                        <div class="col-lg-6 text-sm-center d-none d-md-block">
+                            <img src="@routes.Assets.versioned("images/phone.png")" alt="phone">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="feature-three">
+            <div class="container">
+                <div class="row">
+                    <div class="feature-content">
+                        <div class="col-lg-6 d-none d-md-block">
+                            <img src="@routes.Assets.versioned("images/laptop.jpeg")" alt="">
+                        </div>
+                        <div class="col-lg-5 ml-auto">
+                            <h6>The wow factor</h6>
+                            <h2>Australians wouldn't give a startup.logo for anything else.</h2>
+                            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, ea error odit
+                                praesentium rerum sapiente sed. Architecto illum in obcaecati praesentium reprehenderit,
+                                similique tenetur vero voluptatem. Enim laborum quas suscipit.
+                            </p>
+                            <a href="" role="button" class="btn btn-outline-primary btn-lg">Git'r done</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="feature-four" class="feature-alt">
+            <div class="container">
+                <div class="row">
+                    <div class="feature-content">
+                        <div class="col-lg-6">
+                            <h6>Kudos</h6>
+                            <blockquote class="blockquote">
+                                        &ldquo;No Startup.logo, no kiss.&rdquo;
+                                <footer class="blockquote-footer">
+                                    Brelvis Hesley, <cite>some guy at a wedding</cite>
+                                </footer>
+                            </blockquote>
+                        </div>
+                        <div class="col-lg-6 d-none d-md-block">
+                            <img src="@routes.Assets.versioned("images/funnyPerson.jpg")" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="feature-five" class="feature-full">
+            <div class="container">
+                <div class="row">
+                    <div class="feature-content justify-content-center">
+                        <div class="col-lg-8 ">
+                            <h6>Powerfully packed action</h6>
+                            <h2>When is absolutely, positively has to be Startup.logo overnight.</h2>
+                            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A architecto
+                                blanditiis dolore ducimus error in inventore, labore molestias natus officiis
+                                perspiciatis placeat suscipit tempore ullam ut? Assumenda consequatur exercitationem
+                                quasi.
+                            </p>
+                            <h6>With Startup.logo you can:</h6>
+                            <div class="row">
+                                <div class="col-lg-6">
+                                    <ul>
+                                        <li>Put something on anything</li>
+                                        <li>Use you wallet for everything other than buying things</li>
+                                    </ul>
+                                </div>
+                                <div class="col-lg-6">
+                                    <li>Tum tee tum tum</li>
+                                    <li>Win at most things</li>
+                                </div>
+
+                                <img src="@routes.Assets.versioned("images/barcelona.jpeg")" height="600px" alt="Barcelona">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+        <section id="feature-six" class="feature-dark">
+            <div class="container">
+                <div class="row">
+                    <div class="feature-content">
+                        <div class="col-lg-6 d-none d-md-block">
+                            <img src="@routes.Assets.versioned("images/coolRoad.jpeg")" alt="">
+                        </div>
+                        <div class="col-lg-5 ml-auto">
+                            <h6>The all in one solution</h6>
+                            <h2>Nobody doesn't like Startup.logo</h2>
+                            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus ad
+                                aliquam aperiam eaque eos esse illo impedit maiores nobis officiis optio perspiciatis
+                                quae quia, quod repellendus, repudiandae rerum tempora vel?</p>
+                            <a href="" role=button class="btn btn-outline-secondary btn-lg">Get some cool stuff</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="feature-seven">
+            <div class="container">
+                <div class="row">
+                    <div class="feature-content justify-content-center">
+                        <div class="col-lg-8">
+                            <h6>100% No money back gurantee</h6>
+                            <h2>Put your money where Startup.logo's mouth is.</h2>
+                            <p class="lead">Starting as low a $345 per day. Lorem ipsum dolor sit amet, consectetur
+                                adipisicing elit. Assumenda aut commodi eligendi itaque labore laborum magni, nostrum
+                                optio pariatur similique! Adipisci ea eum eveniet fuga illo impedit, repellendus ullam
+                                voluptatem.
+                            </p>
+                            <a href="" role="button" class="btn btn-outline-success btn-lg">
+                                Toss some money our way (please)
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+        <footer id="main-footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                                &copy; 2017 Startup.logo is not a real thing. If it is, this site was not meant
+                            to be a mockery of it
+                        <br>
+                        Coded by <a href="http://andyboyle.io">Andy</a>
+                    </div>
+                    <div class="col-md-2">
+                        <h6>Our product</h6>
+                        <ul class="list-unstyled">
+                            <li><a href="">Features</a></li>
+                            <li><a href="">Solutions</a></li>
+                            <li><a href="">Plans</a></li>
+                            <li><a href="">Sign in</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-2">
+                        <h6>Our team</h6>
+                        <ul class="list-unstyled">
+                            <li><a href="">About</a></li>
+                            <li><a href="">Highlights</a></li>
+                            <li><a href="">Investors</a></li>
+                            <li><a href="">Partners</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-2">
+                        <h6>Other things</h6>
+                        <ul class="list-unstyled">
+                            <li><a href="">Jobs</a></li>
+                            <li><a href="">Contact</a></li>
+                            <li><a href="">FAQ</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
+
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
+        integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"
+        integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
         @scalajs.html.scripts("client", routes.Assets.versioned(_).toString, name => getClass.getResource(s"/public/$name") != null)
     </body>
 </html>
