--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -24,7 +24,7 @@
             </button>
             <a class="navbar-brand" href="#">
                 <img src="@routes.Assets.versioned("icons/SudoStream_icon.png")" alt="logo" height="26">
-                <span class="display-6">Time To Teach</span>
+                <span class="display-5">Time To Teach</span>
             </a>
 
             <div class="collapse navbar-collapse" id="startupNavbar">
@@ -228,84 +228,7 @@
             </div>
         </section>
 
-        <section id="pricing">
-            <div class="container">
-                <div class="row">
-                    <div class="feature-content justify-content-center">
-                        <div class="col-lg-8">
-                            <h2>Pricing</h2>
-                            <p class="lead">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                                ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                            </p>
-
-
-                            <div class="row">
-                                <div class="col-sm-12">
-                                    <div class="card-group">
-
-                                        <div class="card">
-                                            <div class="card-block">
-                                                <h4 class="card-title">Strategy &amp; Planning</h4>
-                                                <h6 class="subtitle">Support card subtitle</h6>
-                                                <img src="@routes.Assets.versioned("../../public/images/chalkboard.jpg")" alt="A Chalkboard">
-                                            </div>
-                                            <div class="card-block">
-                                                <p class="card-text">
-                                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                                </p>
-                                                <button type="button" class="btn btn-outline-success" data-toggle="modal" data-target="#myModal">
-                                                    learn more</button>
-                                            </div>
-                                        </div>
-
-                                        <div class="card">
-                                            <div class="card-block">
-                                                <h4 class="card-title">Creative &amp; Design</h4>
-                                                <h6 class="subtitle">Support card subtitle</h6>
-                                                <img src="@routes.Assets.versioned("../../public/images/workingOnLaptop.jpg")" alt="Working on laptop">
-                                            </div>
-                                            <div class="card-block">
-                                                <p class="card-text">
-                                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                                                    ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
-                                                    in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                                                    cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                                                </p>
-                                                <button type="button" class="btn btn-outline-success" data-toggle="modal" data-target="#myModal">
-                                                    learn more</button>
-                                            </div>
-                                        </div>
-
-                                        <div class="card">
-                                            <div class="card-block">
-                                                <h4 class="card-title">Programming &amp; Technical</h4>
-                                                <h6 class="subtitle">Support card subtitle</h6>
-                                                <img src="@routes.Assets.versioned("../../public/images/computer-programming.jpeg")" alt="Example of a program">
-                                            </div>
-                                            <div class="card-block">
-                                                <p class="card-text">
-                                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                                                    ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
-                                                    in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                                                </p>
-                                                <button type="button" class="btn btn-outline-success" data-toggle="modal" data-target="#myModal">
-                                                    learn more</button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section id="news">
+        <section id="news" class="feature-alt">
             <div class="container">
                 <div class="row">
                     <div class="feature-content">
@@ -320,7 +243,7 @@
                         <hr>
 
                         <div class="row">
-                            <div class="col-sm-12">
+                            <div class="col-lg-12">
                                 <div class="card-columns">
                                     <div class="card">
                                         <img class="card-img-top" src="@routes.Assets.versioned("../../public/images/takingPhoto.jpg")" alt="Card image cap">
@@ -411,6 +334,120 @@
             </div>
         </section>
 
+
+        <section id="pricing" >
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="feature-content ">
+                        <div class="col-lg-12 text-center">
+                            <h1 class="display-4">Pricing</h1>
+                            <p id="pricing-lead" class="lead">
+                                Time To Teach has simple pricing
+                            </p>
+
+                            <div class="row justify-content-center">
+                                <div class="col-lg-10">
+                                    <div class="card-group">
+
+                                        <div class="card">
+                                            <div class="card-block ">
+                                                <h4 class="card-title">Free</h4>
+                                                <hr align="center" width="50%">
+                                                <h6 class="subtitle">No cost forever and ever!</h6>
+                                            </div>
+                                            <div class="card-block">
+                                                <p class="card-text">
+                                                    <span class="display-4">£0</span>/month
+                                                </p>
+
+                                                <div class="text-left">
+                                                    <ul class="list-unstyled">
+                                                        <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.svg")" alt="Check">
+                                                            Some cool feature one</li>
+                                                        <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.svg")" alt="Check">
+                                                            Another thing that is great</li>
+                                                        <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.svg")" alt="Check">
+                                                            Don't forget this too</li>
+                                                        <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.svg")" alt="Check">
+                                                            Finally this comes free as well</li>
+                                                    </ul>
+                                                </div>
+
+                                                <button type="button" class="btn btn-outline-success" data-toggle="modal" data-target="#myModal">
+                                                    Sign Up
+                                                </button>
+                                            </div>
+                                        </div>
+
+                                        <div class="card">
+                                            <div class="card-block">
+                                                <h4 class="card-title">Standard</h4>
+                                                <hr align="center" width="50%">
+                                                <h6 class="subtitle">Support card subtitle</h6>
+                                            </div>
+                                            <div class="card-block">
+                                                <p class="card-text">
+                                                    <span class="display-4">£2.50</span>/month
+                                                </p>
+
+                                                <div class="text-left">
+                                                    <ul class="list-unstyled">
+                                                        <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.svg")" alt="Check">
+                                                            Some cool feature one</li>
+                                                        <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.svg")" alt="Check">
+                                                            Another thing that is great</li>
+                                                        <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.svg")" alt="Check">
+                                                            Don't forget this too</li>
+                                                        <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.svg")" alt="Check">
+                                                            Finally this comes free as well</li>
+                                                    </ul>
+                                                </div>
+
+                                                <button type="button" class="btn btn-outline-success" data-toggle="modal" data-target="#myModal">
+                                                    Sign Up
+                                                </button>
+                                            </div>
+                                        </div>
+
+                                        <div class="card">
+                                            <div class="card-block">
+                                                <h4 class="card-title">Premium</h4>
+                                                <hr align="center" width="50%">
+                                                <h6 class="subtitle">Support card subtitle</h6>
+                                            </div>
+                                            <div class="card-block">
+                                                <p class="card-text">
+                                                    <span class="display-4">£5</span>/month
+                                                </p>
+
+                                                <div class="text-left">
+                                                    <ul class="list-unstyled">
+                                                        <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.svg")" alt="Check">
+                                                            Some cool feature one</li>
+                                                        <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.svg")" alt="Check">
+                                                            Another thing that is great</li>
+                                                        <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.svg")" alt="Check">
+                                                            Don't forget this too</li>
+                                                        <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.svg")" alt="Check">
+                                                            Finally this comes free as well</li>
+                                                    </ul>
+                                                </div>
+
+                                                <button type="button" class="btn btn-outline-success" data-toggle="modal" data-target="#myModal">
+                                                    Sign Up
+                                                </button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
         <section id="about">
             <div class="section-content">
                 <div class="container h-100">
@@ -483,7 +520,6 @@
 
 
         @* ========================================================================================================*@
-
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
