--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -337,7 +337,7 @@
         <section id="pricing" >
             <div class="container">
                 <div class="feature-content ">
-                    <div class="text-center">
+                    <div class="col-lg-12 text-center">
                         <h1 class="display-4">Pricing</h1>
                         <p class="lead">
                             Time To Teach has simple pricing
