okay lets move ontp signin button

--- a/server/public/stylesheets/main.css
+++ b/server/public/stylesheets/main.css
@@ -152,3 +152,10 @@ img {
         align-items: center;
     }
 }
+
+@media screen and ( min-width: 1200px) {
+    /*#pricing .card {*/
+        /*display: block;*/
+    /*}*/
+}
+
