--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -337,13 +337,13 @@
         <section id="pricing" >
             <div class="container">
                 <div class="feature-content ">
-                    <div class="col-lg-12 text-center">
+                    <div class="text-center">
                         <h1 class="display-4">Pricing</h1>
                         <p class="lead">
                             Time To Teach has simple pricing
                         </p>
-                        <div class="card-deck">
-                            <div class="card">
+                        <div class="card-deck col-xs-12">
+                            <div class="card col-xs-12 col-md-4">
                                 <div class="card-body ">
                                     <h4 class="card-title">Free</h4>
                                     <hr align="center" width="50%">
@@ -374,7 +374,7 @@
                                 </button>
                             </div>
 
-                            <div class="card">
+                            <div class="card col-xs-12 col-md-4">
                                 <div class="card-body">
                                     <h4 class="card-title">Standard</h4>
                                     <hr align="center" width="50%">
@@ -406,7 +406,7 @@
 
                             </div>
 
-                            <div class="card">
+                            <div class="card col-xs-12 col-md-4">
                                 <div class="card-body">
                                     <h4 class="card-title">Premium</h4>
                                     <hr align="center" width="50%">
