front page tidier

--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -56,9 +56,10 @@
 
         <div id="stage">
             <div id="stage-caption">
-                <h1 class="display-3">That's handy, Andy! Stick it in the startup logo.</h1>
-                <p>I see startup logo in your future.</p>
-                <a href="" class="btn btn-lg btn-success">Sign up now</a>
+                <h1 class="display-3">Time To Teach</h1>
+                <h2 class="display-5">Easy planning for busy teachers</h2>
+                <p>Designed specfically for primary school teachers</p>
+                <a href="#pricing" class="btn btn-lg btn-success">Learn more</a>
             </div>
         </div>
 
