--- a/server/public/stylesheets/main.css
+++ b/server/public/stylesheets/main.css
@@ -50,8 +50,8 @@ img {
     max-width: 60rem;
     margin: 0 auto;
     text-align: center;
-    background: rgba(0, 0, 0, 0.3);
-    padding: 2rem;
+    background: rgba(0, 0, 0, 0.35);
+    padding: 4rem 3rem;
 }
 
 #stage-caption h1 {
@@ -59,6 +59,11 @@ img {
     font-weight: bold;
     text-transform: uppercase;
 }
+
+#stage-caption h2 {
+    color: white;
+}
+
 
 .feature-content {
     display: flex;
