--- a/server/app/views/signupNew.scala.html
+++ b/server/app/views/signupNew.scala.html
@@ -60,10 +60,7 @@
                         <a class="nav-link disabled" href="#">Blog</a>
                     </li>
                     <li class="nav-item nav-login-button">
-                        <a class="btn btn-outline-primary" href="@routes.Application.login()">Log in</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="btn btn-primary" href="#">Sign up</a>
+                        <a class="btn btn-outline-primary" href="#" onclick="signOut();">Sign out</a>
                     </li>
                 </ul>
             </div>
