--- a/server/app/views/signupNew.scala.html
+++ b/server/app/views/signupNew.scala.html
@@ -1,5 +1,5 @@
 @import models.timetoteach.School
-@(userForm: Form[controllers.UserSignupController.UserData],
+@(userData: controllers.UserSignupController.UserData,
         postUrl: Call,
         userPictureUri: String,
         userFirstName: String,
@@ -28,7 +28,9 @@
         <div class="d-none g-signin2" ></div>
         <div id="mainAppTopMargin"></div>
 
-        <h1>Let's sign up to Time To Teach</h1>
+        <section id="signup-header">
+            <h2 class="text-center">Sign up to Time To Teach</h2>
+        </section>
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#startupNavbar" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
@@ -66,8 +68,45 @@
             </div>
         </nav>
 
+        <section id="signupForm">
+            <div class="container">
+                <div class="row">
+                    <div >
+                        <picture>
+                            <source media="(min-width: 50px)" srcset="@userPictureUri">
+                            <img class="img-circle-standard" src="@userPictureUri" alt="" style="width: auto;">
+                        </picture>
 
-
+                        <h3>Hi @userData.firstName</h3>
+                    </div>
+                    <div class="signup-form-content">
+                        <form>
+                            <div class="form-group">
+                                <label for="First Name" >First Name</label>
+                                <input type="text" class="form-control" id="inputFormFirstName" aria-describedby="emailHelp" placeholder="Enter First Name" value="@userData.firstName">
+                            </div>
+                            <div class="form-group">
+                                <label for="Family Name" >Surname Name</label>
+                                <input type="text" class="form-control" id="inputFormFirstName" aria-describedby="emailHelp" placeholder="Enter First Name" value="@userData.familyName">
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputEmail1">Email address</label>
+                                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Email" value="@userData.emailAddress">
+                                <small id="emailHelp" class="form-text text-muted">
+                                    We'll never share your email with anyone else.</small>
+                            </div>
+                            <div class="form-check">
+                                <label class="form-check-label">
+                                    <input type="checkbox" class="form-check-input">
+                                    Maybe some terms and conditions here!?
+                                </label>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <footer id="main-footer">
             <div class="container">
