--- a/server/app/views/signupNew.scala.html
+++ b/server/app/views/signupNew.scala.html
@@ -28,9 +28,6 @@
         <div class="d-none g-signin2" ></div>
         <div id="mainAppTopMargin"></div>
 
-        <section id="signup-header">
-            <h2 class="text-center">Sign up to Time To Teach</h2>
-        </section>
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#startupNavbar" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
@@ -71,37 +68,66 @@
         <section id="signupForm">
             <div class="container">
                 <div class="row">
-                    <div >
-                        <picture>
-                            <source media="(min-width: 50px)" srcset="@userPictureUri">
-                            <img class="img-circle-standard" src="@userPictureUri" alt="" style="width: auto;">
-                        </picture>
-
-                        <h3>Hi @userData.firstName</h3>
+                    <div class="col-lg-12 ">
+                        <img class="center img-circle-standard" src="@userPictureUri" height="64px">
                     </div>
-                    <div class="signup-form-content">
+                </div>
+                <div class="row">
+                    <div id="signup-header" class="col-lg-12 text-center">
+                        <h3> Hi @userData.firstName</h3>
+                        <h4>Please fill in the details below</h4>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="signup-form-content col-lg-12">
                         <form>
-                            <div class="form-group">
-                                <label for="First Name" >First Name</label>
-                                <input type="text" class="form-control" id="inputFormFirstName" aria-describedby="emailHelp" placeholder="Enter First Name" value="@userData.firstName">
+                            <div class="row">
+                                <div class="col-lg-6">
+                                    <div class="form-group">
+                                        <label for="First Name">First Name</label>
+                                        <input type="text" class="form-control" id="inputFormFirstName" aria-describedby="emailHelp" placeholder="Enter First Name" value="@userData.firstName">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="Family Name" >Surname Name</label>
+                                        <input type="text" class="form-control" id="inputFormFirstName" aria-describedby="emailHelp" placeholder="Enter First Name" value="@userData.familyName">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="exampleInputEmail1">Email address</label>
+                                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Email" value="@userData.emailAddress">
+                                        <small id="emailHelp" class="form-text text-muted">
+                                            We'll never share your email with anyone else.</small>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6">
+                                    <div class="form-check">
+                                        <label class="form-check-label">
+                                            <input type="checkbox" class="form-check-input">
+                                            Maybe some terms and conditions here!?
+                                        </label>
+                                    </div>
+                                    <button type="submit" class="btn btn-primary">Submit</button>
+                                </div>
                             </div>
-                            <div class="form-group">
-                                <label for="Family Name" >Surname Name</label>
-                                <input type="text" class="form-control" id="inputFormFirstName" aria-describedby="emailHelp" placeholder="Enter First Name" value="@userData.familyName">
+
+                            <div class="row mx-auto">
+                                <div class="form-check">
+                                    <label class="form-check-label">
+                                        <input type="checkbox" class="form-check-input">
+                                        Subscribe to newsletter
+                                    </label>
+                                </div>
                             </div>
-                            <div class="form-group">
-                                <label for="exampleInputEmail1">Email address</label>
-                                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Email" value="@userData.emailAddress">
-                                <small id="emailHelp" class="form-text text-muted">
-                                    We'll never share your email with anyone else.</small>
+                            <div class="row mx-auto">
+                                <div class="form-check">
+                                    <label class="form-check-label">
+                                        <input type="checkbox" class="form-check-input">
+                                        I have read the <a href="#">terms and conditions</a> and agree to them.
+                                    </label>
+                                </div>
                             </div>
-                            <div class="form-check">
-                                <label class="form-check-label">
-                                    <input type="checkbox" class="form-check-input">
-                                    Maybe some terms and conditions here!?
-                                </label>
+                            <div class="row justify-content-center">
+                                <button type="submit" class="btn btn-primary">Submit</button>
                             </div>
-                            <button type="submit" class="btn btn-primary">Submit</button>
                         </form>
                     </div>
                 </div>
